<resources>
    <string name="app_name">Idea Tracker Plus</string>
    <string name="action_settings">Settings</string>
    <string name="radio_1" translatable="false">1</string>
    <string name="radio_2" translatable="false">2</string>
    <string name="radio_3" translatable="false">3</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="functions_label">Functions</string>
    <string name="rename_pro">Rename project</string>
    <string name="delete_pro">Delete project</string>
    <string name="delete">DELETE</string>
    <string name="create">CREATE</string>
    <string name="close">CLOSE</string>
    <string name="rename">RENAME</string>
    <string name="all_pro">All projects</string>
    <string name="new_pro">New project</string>
    <string name="dark_col">Dark Theme</string>
    <string name="primary_col">Primary color</string>
    <string name="secondary_col">Secondary color</string>
    <string name="text_col">Text color</string>
    <string name="color_prefs">Color preferences</string>
    <string name="reset_color_prefs">Reset color preferences</string>
    <string name="functions">Functions</string>
    <string name="expand_collapse">Expand/collapse all</string>
    <string name="select_prim_col">Select primary color</string>
    <string name="select_sec_col">Select secondary color</string>
    <string name="select_text_col">Select text color</string>
    <string name="nothing_move">"Nothing to move from "</string>
    <string name="must_diff">Tabs must be different</string>
    <string name="undo">UNDO</string>
    <string name="trash">Trash</string>
    <string name="new_pro_message">Give it a unique name</string>
    <string name="name_taken">This project already exists</string>
    <string name="rename_pro_message">Give it a new name</string>
    <string name="delete_pro_message">And its ideas too</string>
    <string name="no_project">No project</string>
    <string name="reset_color_pref_message">For this project only</string>
    <string name="no_ideas">No ideas</string>
    <string name="no_project_snack_message">You should create a project first</string>
    <string name="first_tab">Ideas</string>
    <string name="second_tab">Later</string>
    <string name="third_tab">Done</string>
    <string name="priority">Priority</string>
    <string name="do_later">Do later</string>
    <string name="ok">OK</string>
    <string name="get_started">Get started with a new project\nTap anywhere</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="hint_edit_idea">Your idea or task</string>
    <string name="hint_edit_note">Some note or comment</string>
    <string name="error_empty_taken">Name is empty or already taken</string>
    <string name="help">Help</string>
    <string name="tuto_mode">Tutorial mode is now active</string>
    <string name="dark_theme_pref" translatable="false">darkTheme</string>
    <string name="show_done_pref" translatable="false">showDone</string>
    <string name="show_done_msg">Show Done tab</string>
    <string name="big_text_pref" translatable="false">bigTextSwitch</string>
    <string name="big_text_msg">Bigger text for ideas</string>
    <string name="first_project_content">Hi there! Your projects are in this drawer.\nTap on the header to switch to the menu.</string>
    <string name="first_project_pref" translatable="false">firstProject</string>
    <string name="handle_idea_pref" translatable="false">handleIdea</string>
    <string name="first_idea_pref" translatable="false">firstIdea</string>
    <string name="first_idea_title">Awesome! Now, your ideas and tasks for this project will be shown there.\n<b>Tap</b> the button over here to add one.\n<b>Hold</b> it for more options.</string>
    <string name="handle_idea_content">Now try to interact with your idea:\n- Tap for a detailed view and to edit idea\n- Hold and drag to reorder ideas\n- Swipe right to mark it done\n- Swipe left to save it for later</string>
    <string name="dont_forget">Don\'t forget to type out your idea</string>
    <string name="later">LATER</string>
    <string name="done_caps">DONE</string>
    <string name="now">NOW</string>
    <string name="recover">RECOVER</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="see_app_intro">See app intro again</string>
    <string name="activate_tuto">Activate tutorial again</string>
    <string name="feedback">Send feedback</string>
    <string name="source_code">Source code</string>
    <string name="welcome">Welcome to\nIdea Tracker Plus</string>
    <string name="welcome_content">All your ideas and tasks\nin one place</string>
    <string name="simple">Keep it simple</string>
    <string name="simple_content">Capture ideas faster\nwith little information required</string>
    <string name="organized">Stay organized</string>
    <string name="organized_content">Class your ideas in projects\nto stay on focus</string>
    <string name="things_done">Get things done</string>
    <string name="things_done_content">And keep track of your progress</string>
    <string name="edit">EDIT</string>
    <string name="idea">idea</string>
    <string name="ideas">ideas</string>
    <string name="rename_lower">Rename</string>
    <string name="delete_pro_title">Delete project \'</string>
    <string name="new_idea">New idea</string>
    <string name="move_all_title">Move all ideas</string>
    <string name="moved_all_1">"All ideas from "</string>
    <string name="moved_all_2">" moved to "</string>
    <string name="idea_deleted">Idea deleted</string>
    <string name="priority_group">"Priority "</string>
    <string name="edit_idea">Edit idea</string>
    <string name="rate_app">Rate Ideas Tracker</string>
    <string name="right_drawer_guide">By the way, tap the 3 dots here to change the colors of your project interface and access some functions!</string>
    <string name="right_drawer_pref" translatable="false">rightDrawer</string>
    <string name="next">Next</string>
    <string name="idea_moved_snack">"Idea moved to "</string>
    <string name="sort_priority">Sort by priority</string>
    <string name="export_file">Export to file</string>
    <string name="import_file">Import from file</string>
    <string name="filename_title">Enter file name</string>
    <string name="read_permission_rationale">Read Permission should be granted for import functionality to work</string>
    <string name="write_permission_rationale">Write Permission should be granted for export functionality to work</string>
    <string name="cant_read_file">Can not read file</string>
    <string name="cant_write_file">Can not write file</string>
    <string name="cant_parse_file">Can not parse file. Most probably it is not exported from Idea Tracker Plus</string>
    <string name="clear_done">Clear Done tab</string>
    <string name="done_cleared">Done tab cleared</string>
    <string name="favorite_project" translatable="false">favorite_project</string>
    <string name="search_tab">Search</string>
    <string name="search">Search</string>
    <string name="voice_msg">What\'s your idea?</string>
    <string name="idea_menu_pref">firstIdeaMenu</string>
    <string name="save">Save</string>
    <string name="detailed_idea">Idea details</string>

    <string-array name="array_from">
        <item>Done</item>
        <item>Later</item>
        <item>Ideas</item>
    </string-array>

    <string-array name="array_to">
        <item>Trash</item>
        <item>Ideas</item>
        <item>Later</item>
        <item>Done</item>
    </string-array>


</resources>
