<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/md_red_a200"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_bulb" />

    </RelativeLayout>

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_idea"
        android:textColor="@color/md_black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:id="@+id/delete"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:elevation="5dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/ok"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:elevation="5dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/edit"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:layout_toLeftOf="@id/ok"
            android:background="@drawable/border"
            android:elevation="5dp"
            android:text="@string/edit" />


    </RelativeLayout>
</LinearLayout>